resources/console/web/service-core-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: console-core-ui
  labels:
    app: console
spec:
  ports:
    - port: 80
      name: http2-core-ui
      targetPort: 80
    - port: 6081
      name: status-port-core-ui
      targetPort: 6081
  selector:
    app: console
