resources/console/web/service-service-catalog.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-catalog
  labels:
    app: service-catalog
spec:
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http2
  selector:
    app: service-catalog
