resources/console/web/ingress-core-ui.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: core-ui
spec:
  rules:
  - host: "*.kyma.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: console-core-ui
            port:
              number: 80
