resources/console/web/ingress-core.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: console-core
spec:
  rules:
  - host: tets.ingress.ingress.hasselhoff.shoot.canary.k8s-hana.ondemand.com
    http:
      paths:
      - path: /core
        pathType: Prefix
        backend:
          service:
            name: console-core
            port:
              number: 80 
      - path: /pamela
        pathType: Prefix
        backend:
          service:
            name: pamela
            port:
              number: 3001
      - path: /core-ui
        pathType: Prefix
        backend:
          service:
            name: console-core-ui
            port:
              number: 80
