resources/console/web/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-core
  annotations:
    ingress.kubernetes.io/cache-enable: "false"    
    cert.gardener.cloud/purpose: managed
spec:
  tls:
  - secretName: cert-wildcard  
  rules:
  - host: core.%DOMAIN%
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: console-core
            port:
              number: 8080
  - host: core-ui.%DOMAIN%
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: console-core-ui
            port:
              number: 8080
  - host: catalog.%DOMAIN%
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-catalog
            port:
              number: 8080
